Fix eshop badges aligning

--- a/static/scss/components/_eshop.scss
+++ b/static/scss/components/_eshop.scss
@@ -2,6 +2,12 @@
   padding-bottom: 4rem;
 }
 
+.eshop-badges {
+  @include media-breakpoint-up(md) {
+    text-align: right;
+  }
+}
+
 .eshop-block {
   padding: 1rem 0;
   border-top: 1px solid $gray-300;
